# minimumexcesswork

./: .gitignore  README.md
mew_og/: README.md  activate.sh  pyproject.toml
mew_og/data/: biased_ddpm_samples.h5  biased_ddpm_samples.json  gmm_params.npy  trajectory.h5
mew_og/data/homeodomain/: 3jhnha.csv
mew_og/mew_og/: __init__.py
mew_og/mew_og/benchmark/: __init__.py  augmenter.py  experiments.py  sampling.py  trainer.py
mew_og/mew_og/config/: __init__.py  bioemu_homeodomain.json  prinz_ddpm.json  prinz_mew_og.json  prinz_mew_og_oggm_pretrained.json  prinz_reweighting.json
mew_og/mew_og/data/: __init__.py  dataloader.py  prinz.py
mew_og/mew_og/guidance/: __init__.py  augmenter.py  mew_og_model.py  scaling.py
mew_og/mew_og/io/: __init__.py  checkpoints.py  hdf5.py
mew_og/mew_og/models/: __init__.py  beta_schedule.py  losses.py  oggm_compat.py  score_network.py
mew_og/mew_og/observables/: __init__.py  base.py  gmm.py  nmr.py
mew_og/mew_og/reweighting/: __init__.py  maxent.py
mew_og/mew_og/samplers/: __init__.py  vp_sde.py
mew_og/mew_og/training/: __init__.py  experiments.py  train_ddpm.py  train_mew_og.py
mew_og/mew_og/utils/: __init__.py  paths.py  seed.py  tensor.py
mew_og/scripts/: fit_gmm_observable.py  fit_lambdas_prinz.py  generate_prinz_trajectory.py  run_bioemu_benchmark.py  run_prinz_pipeline.sh  sample_ddpm_prinz.py  train_ddpm_prinz.py  train_mew_og_prinz.py
mew_og/trained_models/toy/prinz-potential/biased-model/: model.pth.tar
mew_pg/: .gitignore  README.md  pyproject.toml  run_path_guidance.py
mew_pg/src/bioemu/: sample.py  (+8 more)
(+1 files in other folders)
