[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mew_og"
version = "0.1.0"
description = "Minimum-Excess-Work Observable Guidance for Diffusion Models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9,<3.12"
authors = [
    {name = "MEW-OG Authors"}
]
keywords = ["diffusion models", "observable guidance", "maximum entropy", "reweighting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "h5py>=3.0.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "tqdm>=4.60.0",
    "dill>=0.3.0",
    "deeptime==0.4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
]

[project.urls]
Homepage = "https://github.com/your-org/mew_og"
Documentation = "https://github.com/your-org/mew_og#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["mew_og*"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 88

